fix(index): remove h3, adjust nav spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -25,10 +25,10 @@ body {
 nav {
   position: fixed;
   top: 0;
-  height: 130px;
+  height: 110px;
   width: 100%;
   background: #eee;
-  padding: 20px;
+  padding: 20px 20px 10px;
   z-index: 3;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease; /* Add smooth transition for any change */
@@ -86,14 +86,14 @@ nav ul li a:hover {
   margin-top: 40px;
 }
 
-h3 {
+/* h3 {
   display: block;
   text-align: center;
   color: black;
   font-size: 40px;
   font-weight: 200;
   padding: 40px 0;
-}
+} */
 
 .portfolio-tile {
   background-color: #fff;
@@ -134,8 +134,8 @@ a h3:hover {
   color: #555;
   text-align: center;
   max-width: 800px;
-  margin: 10px auto;
-  padding: 0 20px;
+  margin: 60px auto;
+  padding: 0 40px;
   font-weight: 300;
 }
 
